using Infrastructure;

namespace WebApi
{
    public class Group : DbModel
    {
        public string Name { get; set; }
    }
}