@startuml database

title Database

entity users {
    * id
    ---
    * display_name
    * email
    * prestige_address
    * mainnet_address
    * prestige_privatekey
    * oauth_token(s)
}

entity groups {
    * id
    ---
    * name
}

entity user_group_bridge {
    * user_id
    * group_id
}

entity propositions {
    * id
    ---
    * group_id
    * title
    * description
    * address
    * result (yes/no)
}

entity votes {
    * id
    ---
    * user_id
    * proposition_id
    * vote
}

users <-- user_group_bridge
groups <-- user_group_bridge
propositions --> groups
votes --> users
votes --> propositions

@enduml